--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
     <string name="change_size">Change size</string>
     <string name="change_color">Change color</string>
     <string name="change_text_color">change text size</string>
+    <string name="Login">Login</string>
+    <string name="Signup">Signup</string>
+    <string name="e_mail">email</string>
+    <string name="password">password</string>
+    <string name="signin_status"></string>
+    <string name="custom_auth_signin_status_user">User ID: %s</string>
+    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>
 </resources>
